# backtest_crew

./: .gitignore  config.py  pyproject.toml  requirements.txt
agent_core/: data_manager.py  execution.py  ib_crypto_support.py  main.py  metrics.py  performance.py  technical_analyzer.py
agent_core/tools/: strategy_tools.py
agent_core/utils/: metrics.py
shared/: fsm.py  liquidity_profiles.py  liquidity_stamper.py  metrics.py  timezone_handler.py
strategies/: base_strategy.py  level_fsm.py  opening_br_strategy.py  vectorized_obr.py  vectorized_obr_exact.py
tests/: test_drawdown_unificado.py  test_forex_fallback.py  test_forex_smoke.py  test_metrics.py  test_metrics_drawdown.py
tools/: run_backtest.py
ui/: _assert_dd_compare.py  _assertions_drawdown.py  _dd_guard.py  app.py  comparison_renderer.py  results_renderer.py  streamlit_chart.py
ui/utils/: __init__.py  ui_keys.py
